--- a/adaptive.css
+++ b/adaptive.css
@@ -1,3 +1,6 @@
+
+
+
 @font-face {
     font-family: Fregat;
     src: url('Fregat-Bold.eot')/*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/fonts/Fregat-Bold.eot*/
@@ -506,6 +509,25 @@ a:hover {
     opacity: 1;
 }
 
+.header_phone1{
+
+    width: auto;
+    height: auto;
+    display: inline-block;
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-left: -30px;
+}
+.header_phone2{
+    font-size: 1.3rem;
+    font-weight: 700;
+    width: auto;
+    height: auto;
+    display: inline-block;
+    padding-left: 10px;
+}
+
+
 textarea, input {
     outline: none;
 }
@@ -707,9 +729,23 @@ a.contact:hover {
     position: absolute;
     text-align: left;
     top: 30px;
-    width: 500px;
+    width: 400px;
+    /*background-color: #0EAEC1;*/
+}
+/*my style css*/
+
+.hover_logo{
+   width: 100vw;
+    height: 100vh;
+    max-width: 200px;
+    max-height: 50px;
+    margin-top:22px;
 }
 
+
+
+
+/*my style css / */
 @media screen and (min-width: 480px) {
     #menu-phone-span {
         color: #000000;
@@ -717,7 +753,10 @@ a.contact:hover {
         font-size: 1.6em;
         font-weight: bold;
         letter-spacing: -0.03em;
+
     }
+
+
 }
 
 @media screen and (min-width: 1100px) {
@@ -789,7 +828,7 @@ a.contact:hover {
 #layer1-2 {
     color: #000000;
     font-family: Fregat, sans-serif;
-    font-size: 44px;
+    font-size: 40px;
 }
 
 #layer1-3 {
@@ -829,19 +868,19 @@ a.contact:hover {
     width: 164px;
 }
 
-#layer1-9 {
-    background-color: rgba(255, 255, 255, 0.9);
-    background-position: center top;
-    background-repeat: no-repeat;
-    border-radius: 15px;
-    box-shadow: 0 0 15px rgba(10, 10, 30, 0.3);
-    height: 356px;
-    left: 600px;
-    position: absolute;
-    text-align: center;
-    top: 176px;
-    width: 370px;
-}
+/*#layer1-9 {*/
+    /*background-color: rgba(255, 255, 255, 0.9);*/
+    /*background-position: center top;*/
+    /*background-repeat: no-repeat;*/
+    /*border-radius: 15px;*/
+    /*box-shadow: 0 0 15px rgba(10, 10, 30, 0.3);*/
+    /*height: 356px;*/
+    /*left: 600px;*/
+    /*position: absolute;*/
+    /*text-align: center;*/
+    /*top: 176px;*/
+    /*width: 370px;*/
+/*}*/
 
 #layer1-10 {
     height: 155px;
@@ -874,7 +913,9 @@ a.contact:hover {
 #layer1-12 {
     color: #cd1b00;
     font-family: 'Fregat';
-    font-size: 50px;
+    font-size: 47px;
+
+    padding-top: 5px;
 }
 
 #layer1-13 {
@@ -2690,6 +2731,7 @@ a:hover {
 
 .nav {
     margin-left: -70px;
+
 }
 
 .nav ul {
@@ -2730,17 +2772,31 @@ a:hover {
     text-align: center;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 800px) and (max-width: 1170px){
     .nav {
         min-height: 40px;
+        margin-left: 0;
+        width: 202px;
     }
+
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+
 
     .nav ul {
         width: 180px;
         padding: 15px 0;
         position: absolute;
+
         top: 0;
-        left: 0;
+        /*left: 0;*/
+        margin-left: 78%;
         border: solid 1px #aaa;
         background: #FAFAFA url(icon-menu.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-menu.png*/ no-repeat 10px 11px;
         border-radius: 5px;
@@ -2780,8 +2836,730 @@ a:hover {
         background: url(icon-check.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-check.png*/ no-repeat 10px 7px;
     }
 
-    .nav.center ul {
-        left: 50%;
-        margin-left: -90px;
+    /*.nav.center ul {*/
+        /*left: 50%;*/
+        /*margin-left: -90px;*/
+    /*}*/
+    #menu-phone {
+        left: 37%;
+        position: absolute;
+        text-align: left;
+        top: 30px;
+        width: 202px;
+        /*background-color: #0EAEC1;*/
     }
 }
+
+
+@media screen and (min-width: 665px)and (max-width: 800px){
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+    #menu-phone {
+        left: 25%;
+        position: absolute;
+        text-align: left;
+        top: 30px;
+        width: 195px;
+        /* background-color: #0EAEC1; */
+    }
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+
+
+    .nav ul {
+        width: 180px;
+        padding: 15px 0;
+        position: absolute;
+
+        top: 0;
+        /*left: 0;*/
+        margin-left: 60%;
+        border: solid 1px #aaa;
+        background: #FAFAFA url(icon-menu.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-menu.png*/ no-repeat 10px 11px;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    }
+
+    .nav li {
+        display: none;
+        margin: 0;
+    }
+
+    .nav .current {
+        display: block;
+    }
+
+    .nav a {
+        display: block;
+        padding: 5px 5px 5px 32px;
+        text-align: left;
+    }
+
+    .nav .current a {
+        background: none;
+        color: #666;
+    }
+
+    .nav ul:hover {
+        background-image: none;
+    }
+
+    .nav ul:hover li {
+        display: block;
+        margin: 0 0 5px;
+    }
+
+    .nav ul:hover .current {
+        background: url(icon-check.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-check.png*/ no-repeat 10px 7px;
+    }
+
+}
+@media screen and (min-width: 500px)and (max-width: 665px){
+
+
+    #layer1-4 {
+        height: 76px;
+        /*width: 322px;*/
+    }
+
+    #layer1-9 {
+        background-color: rgba(255, 255, 255, 0.9);
+        background-position: center top;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        box-shadow: 0 0 15px rgba(10, 10, 30, 0.3);
+        height: 356px;
+        left: 0px;
+        align-content: center;
+        align-items: center;
+        position: absolute;
+        text-align: center;
+        /*top: 519px;*/
+        width: 320px;
+        background-color: #1b1e21;
+    }
+
+    #layer1-1 {
+        background-color: rgba(255, 255, 255, 0.75);
+        border-radius: 1px;
+        max-height: 331px;
+        left: 5px;
+        font-size: 100%;
+        padding: 2em;
+        position: absolute;
+        text-align: left;
+        top: 190px;
+        max-width: 540px;
+    }
+    #layer1-2 {
+        color: #000000;
+        font-family: Fregat, sans-serif;
+        font-size: 1rem;
+    }
+    #layer1-11 {
+        color: #3987af;
+        font-family: "Fregat";
+        font-size: 16px;
+        left: 0;
+        position: absolute;
+        text-align: center;
+        top: 20px;
+        /* width: 370px; */
+    }
+    #layer1-5 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        left: 112px;
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+    #layer1-7 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        /*left: 358px;*/
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+
+    /**/
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+    #menu-phone {
+        left: 8%;
+        position: absolute;
+        text-align: left;
+        top: 30px;
+        width: 195px;
+        /* background-color: #0EAEC1; */
+    }
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+
+
+    .nav ul {
+        width: 180px;
+        padding: 15px 0;
+        position: absolute;
+
+        top: 0;
+        /*left: 0;*/
+        margin-left: 18%;
+        border: solid 1px #aaa;
+        background: #FAFAFA url(icon-menu.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-menu.png*/ no-repeat 10px 11px;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    }
+
+    .nav li {
+        display: none;
+        margin: 0;
+    }
+
+    .nav .current {
+        display: block;
+    }
+
+    .nav a {
+        display: block;
+        padding: 5px 5px 5px 32px;
+        text-align: left;
+    }
+
+    .nav .current a {
+        background: none;
+        color: #666;
+    }
+
+    .nav ul:hover {
+        background-image: none;
+    }
+
+    .nav ul:hover li {
+        display: block;
+        margin: 0 0 5px;
+    }
+
+    .nav ul:hover .current {
+        background: url(icon-check.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-check.png*/ no-repeat 10px 7px;
+    }
+    /**/
+    .hover_logo{
+        display: none;
+    }
+
+}
+
+
+@media screen and (min-width: 320px)and (max-width: 500px){
+
+
+    #layer1-4 {
+        height: 76px;
+        /*width: 322px;*/
+    }
+
+    #layer1-9 {
+        background-color: rgba(255, 255, 255, 0.9);
+        background-position: center top;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        box-shadow: 0 0 15px rgba(10, 10, 30, 0.3);
+        height: 356px;
+        left: 0px;
+        align-content: center;
+        align-items: center;
+        position: absolute;
+        text-align: center;
+        /*top: 519px;*/
+        width: 320px;
+        background-color: #1b1e21;
+    }
+
+    #layer1-1 {
+        background-color: rgba(255, 255, 255, 0.75);
+        border-radius: 1px;
+        max-height: 331px;
+        left: 5px;
+        font-size: 100%;
+        padding: 2em;
+        position: absolute;
+        text-align: left;
+        top: 190px;
+        max-width: 540px;
+    }
+    #layer1-2 {
+        color: #000000;
+        font-family: Fregat, sans-serif;
+        font-size: 1rem;
+    }
+    #layer1-11 {
+        color: #3987af;
+        font-family: "Fregat";
+        font-size: 16px;
+        left: 0;
+        position: absolute;
+        text-align: center;
+        top: 20px;
+        /* width: 370px; */
+    }
+    #layer1-5 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        left: 112px;
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+    #layer1-7 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        /*left: 358px;*/
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+
+    /**/
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+    #menu-phone {
+        left: 1%;
+        position: absolute;
+        text-align: left;
+        top: 30px;
+        width: 195px;
+        /* background-color: #0EAEC1; */
+    }
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+
+
+    .nav ul {
+        width: 180px;
+        padding: 15px 0;
+        position: absolute;
+
+        top: 0;
+        /*left: 0;*/
+        margin-left: 1%;
+        border: solid 1px #aaa;
+        background: #FAFAFA url(icon-menu.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-menu.png*/ no-repeat 10px 11px;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    }
+
+    .nav li {
+        display: none;
+        margin: 0;
+    }
+
+    .nav .current {
+        display: block;
+    }
+
+    .nav a {
+        display: block;
+        padding: 5px 5px 5px 32px;
+        text-align: left;
+    }
+
+    .nav .current a {
+        background: none;
+        color: #666;
+    }
+
+    .nav ul:hover {
+        background-image: none;
+    }
+
+    .nav ul:hover li {
+        display: block;
+        margin: 0 0 5px;
+    }
+
+    .nav ul:hover .current {
+        background: url(icon-check.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-check.png*/ no-repeat 10px 7px;
+    }
+    /**/
+    .hover_logo{
+        display: none;
+    }
+
+}
+
+@media screen and (min-width: 380px)and (max-width: 415px){
+
+
+    #layer1-4 {
+        height: 76px;
+        /*width: 322px;*/
+    }
+
+    #layer1-9 {
+        background-color: rgba(255, 255, 255, 0.9);
+        background-position: center top;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        box-shadow: 0 0 15px rgba(10, 10, 30, 0.3);
+        height: 356px;
+        left: 0px;
+        align-content: center;
+        align-items: center;
+        position: absolute;
+        text-align: center;
+        /*top: 519px;*/
+        width: 320px;
+        background-color: #1b1e21;
+    }
+
+    #layer1-1 {
+        background-color: rgba(255, 255, 255, 0.75);
+        border-radius: 1px;
+        max-height: 331px;
+        left: 5px;
+        font-size: 100%;
+        padding: 2em;
+        position: absolute;
+        text-align: left;
+        top: 190px;
+        max-width: 540px;
+    }
+    #layer1-2 {
+        color: #000000;
+        font-family: Fregat, sans-serif;
+        font-size: 1rem;
+    }
+    #layer1-11 {
+        color: #3987af;
+        font-family: "Fregat";
+        font-size: 16px;
+        left: 0;
+        position: absolute;
+        text-align: center;
+        top: 20px;
+        /* width: 370px; */
+    }
+    #layer1-5 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        left: 112px;
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+    #layer1-7 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        /*left: 358px;*/
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+
+    /**/
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+    #menu-phone {
+        left: 1%;
+        position: absolute;
+        text-align: left;
+        top: 30px;
+        width: 195px;
+        /* background-color: #0EAEC1; */
+        font-size: 14px;
+    }
+    .header_phone1{
+        margin-left: 20px;
+        padding-left: 10px;
+    }
+    .header_phone1 , .header_phone2 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1rem;
+        font-weight: 700;
+        margin-left: 1px;
+    }
+
+    .nav ul {
+        width: 180px;
+        padding: 15px 0;
+        position: absolute;
+
+        top: 0;
+        /*left: 0;*/
+        margin-left: -8%;
+        border: solid 1px #aaa;
+        background: #FAFAFA url(icon-menu.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-menu.png*/ no-repeat 10px 11px;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    }
+
+    .nav li {
+        display: none;
+        margin: 0;
+    }
+
+    .nav .current {
+        display: block;
+    }
+
+    .nav a {
+        display: block;
+        padding: 5px 5px 5px 32px;
+        text-align: left;
+    }
+
+    .nav .current a {
+        background: none;
+        color: #666;
+    }
+
+    .nav ul:hover {
+        background-image: none;
+    }
+
+    .nav ul:hover li {
+        display: block;
+        margin: 0 0 5px;
+    }
+
+    .nav ul:hover .current {
+        background: url(icon-check.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-check.png*/ no-repeat 10px 7px;
+    }
+    /**/
+    .hover_logo{
+        display: none;
+    }
+
+}
+@media screen and (min-width: 300px)and (max-width: 380px){
+
+
+    #layer1-4 {
+        height: 76px;
+        /*width: 322px;*/
+    }
+
+    #layer1-9 {
+        background-color: rgba(255, 255, 255, 0.9);
+        background-position: center top;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        box-shadow: 0 0 15px rgba(10, 10, 30, 0.3);
+        height: 356px;
+        left: 0px;
+        align-content: center;
+        align-items: center;
+        position: absolute;
+        text-align: center;
+        /*top: 519px;*/
+        width: 320px;
+        background-color: #1b1e21;
+    }
+
+    #layer1-1 {
+        background-color: rgba(255, 255, 255, 0.75);
+        border-radius: 1px;
+        max-height: 331px;
+        left: 5px;
+        font-size: 100%;
+        padding: 2em;
+        position: absolute;
+        text-align: left;
+        top: 190px;
+        max-width: 540px;
+    }
+    #layer1-2 {
+        color: #000000;
+        font-family: Fregat, sans-serif;
+        font-size: 1rem;
+    }
+    #layer1-11 {
+        color: #3987af;
+        font-family: "Fregat";
+        font-size: 16px;
+        left: 0;
+        position: absolute;
+        text-align: center;
+        top: 20px;
+        /* width: 370px; */
+    }
+    #layer1-5 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        left: 112px;
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+    #layer1-7 {
+        color: #000000;
+        font-family: "Open Sans", sans-serif;
+        /*font-size: 20px;*/
+        height: 54px;
+        /*left: 358px;*/
+        position: absolute;
+        text-align: left;
+        top: 246px;
+        width: 164px;
+    }
+
+
+    /**/
+    .header_phone1 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-left: 11px;
+    }
+    #menu-phone {
+        left: 1%;
+        position: absolute;
+        text-align: center;
+        top: 2px;
+        width: 320px;
+        /* background-color: #0EAEC1; */
+        font-size: 14px;
+    }
+    .header_phone1{
+        margin-left: 20px;
+        padding-left: 10px;
+    }
+    .header_phone1 , .header_phone2 {
+        width: auto;
+        height: auto;
+        display: block;
+        font-size: 1rem;
+        font-weight: 700;
+        margin-left: 1px;
+    }
+
+    .nav ul {
+        width: 180px;
+        padding: 15px 0;
+        position: absolute;
+
+        top: 10px;
+        /*left: 0;*/
+        margin-left: -33%;
+        border: solid 1px #aaa;
+        background: #FAFAFA url(icon-menu.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-menu.png*/ no-repeat 10px 11px;
+        border-radius: 5px;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    }
+
+    .nav li {
+        display: none;
+        margin: 0;
+    }
+
+    .nav .current {
+        display: block;
+    }
+
+    .nav a {
+        display: block;
+        padding: 5px 5px 5px 32px;
+        text-align: left;
+    }
+
+    .nav .current a {
+        background: none;
+        color: #666;
+    }
+
+    .nav ul:hover {
+        background-image: none;
+    }
+
+    .nav ul:hover li {
+        display: block;
+        margin: 0 0 5px;
+    }
+
+    .nav ul:hover .current {
+        background: url(icon-check.png) /*tpa=http://xn----8sbwheeobai5ad1ltb.xn--j1amh/images/icon-check.png*/ no-repeat 10px 7px;
+    }
+    /**/
+    .hover_logo{
+        display: none;
+    }
+
+}
+
+
